2009-09-06  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/fdo-menu.jl: Partial rewrite of fdo-menu [Matthew Love]

2009-09-05  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.spec.in: improved [Kim B. Heino]

	* lisp/sawfish/wm/ext/fdo-menu.jl: replace boundp check with variable-customized-p

2009-09-03  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/integration/kde.jl: initial kde integration module [incomplete atm]

	* man/sawfish.texi: fixed a typo

	* lisp/sawfish/wm.jl: removed deprecated command-line-arg for getting sm-id

	* po/POTFILES.in: updated

	* lisp/sawfish/wm/defaults.jl: try loading kde-int if kde is running

	* po/*.po: fixed-up

2009-09-02  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/user.jl
	* lisp/sawfish/wm/commands/help.jl: replace display-url by browser
	                                    improved browser command

	* lisp/sawfish/wm/gnome/integration.jl
	* lisp/sawfish/wm/integration/gnome.jl: renamed file
	                                        correctly change of browser-command
	                                        only change browser-command if not customized
						use browser instead of display-url

	* lisp/sawfish/wm/ext/fdo-menu.jl: fixed a bug in language setting
	                                   removed obsolete code
					   trimmed down code
					   clean-up
					   -- [Matthew Love]

	* lisp/sawfish/wm/menus.jl: renamed `All Settings' menu-item to `Sawfish-UI'

2009-09-01  Christopher Bratusek <zanghar@freenet.de>
	* themes/simple/theme.jl: make windows resizable from right border

	* lisp/sawfish/wm/menus.jl: added Session sub-menu
				    move Display Errors here
				    move Restart Sawfish here
				    move Quit Sawfish here

	* lisp/sawfish/wm/help.jl: removed display-url-commands, use browser-command instead
	                           removed help-call-info-gnome

	* lisp/sawfish/wm/user.jl: don't load sawfish.wm.state.gnome
