@@ -1,31 +1,0 @@
-;; This file is part of sawfish.
-
-;; sawfish is free software; you can redistribute it and/or modify it
-;; under the terms of the GNU General Public License as published by
-;; the Free Software Foundation; either version 2, or (at your option)
-;; any later version.
-
-;; sawfish is distributed in the hope that it will be useful, but
-;; WITHOUT ANY WARRANTY; without even the implied warranty of
-;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-;; GNU General Public License for more details.
-
-;; You should have received a copy of the GNU General Public License
-;; along with sawfish; see the file COPYING.  If not, write to
-;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
-
-(declare (in-module user))
-
-;; magic comment to get an alias installed
-;; (define-structure-alias sawfish-extras sawfish.wm.extras)
-
-;; try-require
-;; try to trequire a script, but don't
-;; err if failed, just place a message
-(define (try-require sym)
-  (condition-case nil
-      (require sym)
-    (error nil)))
-
-(require 'sawfish.wm.ext.fdo-menu)
-(update-saw-menu)
